[package]
name = "xous-usb-hid"
version = "0.4.3"
edition = "2021"
description = "Batteries included embedded USB HID library for usb-device. Forked from usbd-human-interface-device"
keywords = ["hid", "usb-device", "usb", "keyboard", "mouse"]
categories = ["no-std", "embedded"]
authors = ["DLKJ"]
repository = "https://github.com/dlkj/usbd-human-interface-device"
homepage = "https://github.com/dlkj/usbd-human-interface-device"
documentation = "https://docs.rs/usbd-human-interface-device"
license = "MIT"

[dependencies]
usb-device = "0.2"
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }
packed_struct = { version = "0.10", default-features = false }
heapless = "0.7"
frunk = { version = "0.4", default-features = false }
num_enum = { version = "0.6", default-features = false }
fugit = "0.3"
option-block = "0.3"

[dev-dependencies]
env_logger = "0.10"
xous-usb-hid = { path = ".", features = ["log"] }

[features]
defmt = ["dep:defmt", "usb-device/defmt"]
